fix layout issue

--- a/src/app/components/PurchaseCard/PurchaseCard.module.css
+++ b/src/app/components/PurchaseCard/PurchaseCard.module.css
@@ -1,3 +1,11 @@
+.card {
+  @apply border border-gray-500 rounded-md p-2 flex flex-col gap-3;
+}
+
+.card:hover {
+  @apply bg-gray-100;
+}
+
 .label {
   @apply text-slate-700 font-semibold;
 }
